tests/NormalTests/paczka2/big_fuzzy/33227896.err
Error in line 6: Eso7g S709 15,8
Error in line 12: 0rmY A843 12,0
Error in line 5: A843 A843 1,1
Error in line 8: Eso7g A408 63,0
Error in line 20: ZD2SK6RT49B A408 83,5
Error in line 22: ZD2SK6RT49B A843 43,4
Error in line 31: ZD2SK6RT49B A408 14,7
Error in line 35: ZD2SK6RT49B A843 99,3
Error in line 42: AP43 AP43 71,9
Error in line 38: ZD2SK6RT49B A408 14,8
Error in line 46: ZD2SK6RT49B S709 21,2
Error in line 45: Eso7g A843 53,6
Error in line 52: Eso7g A408 72,3
Error in line 58: 0rmY A843 86,0
Error in line 59: 0rmY A743 21,2
Error in line 63: 0rmY A843 51,6
Error in line 66: 0rmY A408 53,0
Error in line 73: A843 A843 798,7
Error in line 74: A843 A743 89,9
Error in line 26: hWIBhy A408 433,8
Error in line 93: sLoOElL S709 63 4
Error in line 81: 0rmY S709 117,1
Error in line 107: sKArwnQHF S709 43,4
Error in line 114: A843 A408 97,
Error in line 105: A843 A743 32,2
Error in line 125: A843 A408 276,2
Error in line 123: hWIBhy A843 68,4
Error in line 137: hWIBhy A743 85,3
Error in line 153: hWIBhy A843 50,1
Error in line 159: ZD2SK6RT49B A843 17,9
Error in line 155: 0rmY A408 88,4
Error in line 163: A843 A843 50,9
Error in line 181: hWIBhy A743 34,6
Error in line 177: sLoOElL A408 31,1
Error in line 182: hWIBhy S709 76,9
Error in line 187: hWIBhy A843 49,5
Error in line 195: sLoOElL A843 0,3
Error in line 192: sKArwnQHF A843 24,0
Error in line 202: sKArwnQHF A743 21,86
Error in line 204: hWIBhy A743 4,66
Error in line 201: sKArwnQHF A743 56,8
Error in line 213: sLoOElL A843 67,2
Error in line 223: sLoOElL A408 31,6
Error in line 233: sKArwnQHF A408 92,3
Error in line 232: A843 A843 73,9
Error in line 235: 0rmY S709 86,0
Error in line 243: 0rmY A408 37,4
